# cat-ascii-faces

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: duplicated.rs
